--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
         <item>默认</item>
         <item>简洁</item>
         <item>样式B</item>
+        <item>Google 助手</item>
     </string-array>
 
     <string-array name="list_home_funs" translatable="false">
