--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -192,6 +192,9 @@
 
     <string name="key_recog_compatible_mode" translatable="false">recog_compatible_mode</string>
 
+    <string name="key_connective_service" translatable="false">connective_service</string>
+    <string name="key_device_name" translatable="false">device_name</string>
+
 
 
 </resources>
