修复获取gps位置；若琪定时发送位置

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -196,6 +196,8 @@
     <string name="key_wakeup_screen_when_vw" translatable="false">key_wakeup_screen_when_vw</string>
     <string name="key_device_name" translatable="false">device_name</string>
 
+    <string name="key_rokid_send_loc" translatable="false">rokid_send_loc</string>
+
 
 
 </resources>
