添加设置：蓝牙设备支持

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -205,7 +205,7 @@
     <string name="key_device_name" translatable="false">device_name</string>
 
     <string name="key_rokid_send_loc" translatable="false">rokid_send_loc</string>
-
+    <string name="key_bt_support">bt_support</string>
 
 
 </resources>
