--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
     <string name="text_disconnect_with_debugger">Disconnect remote debugger</string>
     <string name="text_add_follow_action">Add follow action</string>
     <string name="text_parent_action">Parent action:</string>
-    <string name="text_executing">Executing</string>
+    <string name="text_executing">Executing(click to stop)</string>
     <string name="text_parsing">In parsing</string>
     <string name="text_listening">Listening</string>
     <string name="text_run">Run</string>
