--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
         <item>百度语音</item>
     </string-array>
     <string-array name="list_speech_syn_engine" translatable="false">
-        <item>百度语音</item>
+        <item>微软语音</item>
         <item>系统TTS</item>
     </string-array>
 
